<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal" >
<!--android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyActivity">-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startBT"
                android:onClick="startBT"/>
            <!--            <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stuff"/>-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DisableBT"
                android:onClick="disableBT"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discoverBT"
                android:onClick="discoverableBT"/>
            <!--            <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stuff"/>-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FindDevices"
                android:onClick="discoverBT"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ListDevices"
                android:onClick="listPairedDevices"/>
            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>